Add roads, reorder structure of scripts

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -39,17 +39,11 @@
      <Compile Include="Assets\Scripts\WorldSys\GlobalNames.cs" />
      <Compile Include="Assets\Scripts\WorldSys\TimeSystem.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Trader.cs" />
-     <Compile Include="Assets\Scripts\BuyAction.cs" />
-     <Compile Include="Assets\Scripts\InventoryDrag.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Road.cs" />
+     <Compile Include="Assets\Scripts\PlayerSys\Location.cs" />
      <Compile Include="Assets\Scripts\PlayerSys\Player.cs" />
-     <Compile Include="Assets\Scripts\ButtonTemplate.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Bread.cs" />
      <Compile Include="Assets\Scripts\WorldSys\LocalEvent.cs" />
-     <Compile Include="Assets\Scripts\SceneManagement\TradeExitButton.cs" />
-     <Compile Include="Assets\Scripts\SceneManagement\HouseEnter.cs" />
-     <Compile Include="Assets\Scripts\GenInventoryTrader.cs" />
-     <Compile Include="Assets\Scripts\NPCDialogOpen.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Effect.cs" />
      <Compile Include="Assets\Scripts\npc_script.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Location.cs" />
@@ -60,24 +54,32 @@
      <Compile Include="Assets\Scripts\WorldSys\Millet.cs" />
      <Compile Include="Assets\Scripts\PlayerSys\Wagon.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Fermer.cs" />
-     <Compile Include="Assets\Scripts\SellAction.cs" />
-     <Compile Include="Assets\Scripts\TalkAction.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Inventory.cs" />
      <Compile Include="Assets\Scripts\WorldSys\NPC.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Flour.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Product.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Elder.cs" />
-     <Compile Include="Assets\Scripts\GenInventoryPlayer.cs" />
      <Compile Include="Assets\Scripts\WorldSys\AllLocalEvents.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Baker.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\RoadData.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Prices.cs" />
-     <Compile Include="Assets\Scripts\SceneManagement\ToMainButton.cs" />
      <Compile Include="Assets\Scripts\PlayerSys\GameData.cs" />
      <Compile Include="Assets\Scripts\WorldSys\AllEvents.cs" />
      <Compile Include="Assets\Scripts\PlayerSys\ImageData.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
-     <Compile Include="Assets\Scripts\PlayerSys\Location.cs" />
+     <Compile Include="Assets\Scripts\Interface\Map\Road.cs" />
+     <Compile Include="Assets\Scripts\Interface\Trade\GenInventoryPlayer.cs" />
+     <Compile Include="Assets\Scripts\Interface\Trade\GenInventoryTrader.cs" />
+     <Compile Include="Assets\Scripts\Interface\House\BuyAction.cs" />
+     <Compile Include="Assets\Scripts\Interface\Location\HouseEnter.cs" />
+     <Compile Include="Assets\Scripts\Interface\House\SellAction.cs" />
+     <Compile Include="Assets\Scripts\Interface\ButtonTemplate.cs" />
+     <Compile Include="Assets\Scripts\Interface\Trade\TradeExitButton.cs" />
+     <Compile Include="Assets\Scripts\Interface\Trade\InventoryDrag.cs" />
+     <Compile Include="Assets\Scripts\Interface\House\NPCDialogOpen.cs" />
+     <Compile Include="Assets\Scripts\Interface\House\TalkAction.cs" />
+     <Compile Include="Assets\Scripts\Interface\House\ToMainButton.cs" />
+     <Compile Include="Assets\Scripts\Interface\Map\InfoBoard.cs" />
+     <Compile Include="Assets\Scripts\Interface\Map\TravelButton.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
