--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,9 +36,67 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\WorldSys\Bortnik.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\GlobalNames.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\TimeSystem.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Trader.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Miner.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Shoes.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Сook.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Potter.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Brewer.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\NPCData.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Road.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Wax.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Pottery.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Fur.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Table.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Horseshoe.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Woodman.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Bread.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\LocalEvent.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Shoemaker.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Candle.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Board.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Effect.cs" />
      <Compile Include="Assets\Scripts\npc_script.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Location.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Millworker.cs" />
      <Compile Include="Assets\Scripts\Gen.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\WorldSystem.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Metal.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Event.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Priest.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Millet.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Hunter.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Skin.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Wood.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\TavernKeeper.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Beer.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Fermer.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\DriedMeat.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Inventory.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\NPC.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Flour.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Clay.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\LocationData.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Honey.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Tool.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Product.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Elder.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Weapon.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Seaman.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Blacksmith.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\AllLocalEvents.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Book.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Woodworker.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Baker.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Prices.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Chair.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\AllEvents.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Meat.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
+     <None Include="Assets\Scripts\WorldSys\Logs.txt" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
@@ -801,10 +859,6 @@
     <ProjectReference Include="Inventory.csproj">
       <Project>{d4f99fe1-3f7b-4dfe-fc02-fcbf50b889cb}</Project>
       <Name>Inventory</Name>
-    </ProjectReference>
-    <ProjectReference Include="WorldSystem.csproj">
-      <Project>{a465ee24-de24-e7f5-7249-6845831da7c2}</Project>
-      <Name>WorldSystem</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
