--- a/WorldSystem.csproj
+++ b/WorldSystem.csproj
@@ -36,31 +36,65 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\WorldSys\Bortnik.cs" />
      <Compile Include="Assets\Scripts\WorldSys\GlobalNames.cs" />
      <Compile Include="Assets\Scripts\WorldSys\TimeSystem.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Trader.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Miner.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Shoes.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Сook.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Potter.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Brewer.cs" />
      <Compile Include="Assets\Scripts\WorldSys\NPCData.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Road.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Wax.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Pottery.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Fur.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Table.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Horseshoe.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Woodman.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Bread.cs" />
      <Compile Include="Assets\Scripts\WorldSys\LocalEvent.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Shoemaker.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Candle.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Board.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Effect.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Location.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Millworker.cs" />
      <Compile Include="Assets\Scripts\WorldSys\WorldSystem.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Metal.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Event.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Priest.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Millet.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Hunter.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Skin.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Wood.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\TavernKeeper.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Beer.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Fermer.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\DriedMeat.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Inventory.cs" />
      <Compile Include="Assets\Scripts\WorldSys\NPC.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Flour.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Clay.cs" />
      <Compile Include="Assets\Scripts\WorldSys\LocationData.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Honey.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Tool.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Product.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Elder.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Weapon.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Seaman.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Blacksmith.cs" />
      <Compile Include="Assets\Scripts\WorldSys\AllLocalEvents.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Book.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Woodworker.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Baker.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Prices.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Chair.cs" />
      <Compile Include="Assets\Scripts\WorldSys\AllEvents.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Meat.cs" />
      <None Include="Assets\Scripts\WorldSys\WorldSystem.asmdef" />
+     <None Include="Assets\Scripts\WorldSys\Logs.txt" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
