--- a/Inventory.csproj
+++ b/Inventory.csproj
@@ -39,36 +39,40 @@
      <Compile Include="Assets\Scripts\Interface\Location\PlaceNPC.cs" />
      <Compile Include="Assets\Scripts\Interface\Game interface\GameExitButton.cs" />
      <Compile Include="Assets\Scripts\Interface\Game interface\SaveButton.cs" />
-     <Compile Include="Assets\Scripts\Interface\Trade\GenInventoryTrader.cs" />
+     <Compile Include="Assets\Scripts\Interface\Trade\TradeStop.cs" />
+     <Compile Include="Assets\Scripts\Interface\Trade\GenInventoryTraderBuy.cs" />
      <Compile Include="Assets\Scripts\Interface\Trade\UpdatePlayerMoney.cs" />
+     <Compile Include="Assets\Scripts\Interface\Trade\TradeMake.cs" />
      <Compile Include="Assets\Scripts\Interface\Game interface\NotesClose.cs" />
      <Compile Include="Assets\Scripts\Interface\House\SellAction.cs" />
      <Compile Include="Assets\Scripts\Interface\House\ToMainButton.cs" />
-     <Compile Include="Assets\Scripts\Interface\Inventory\PopUp.cs" />
      <Compile Include="Assets\Scripts\Interface\Menu\NewGame.cs" />
+     <Compile Include="Assets\Scripts\Interface\Trade\TradeOpen.cs" />
      <Compile Include="Assets\Scripts\Interface\ButtonTemplate.cs" />
      <Compile Include="Assets\Scripts\Interface\Map\Road.cs" />
      <Compile Include="Assets\Scripts\Interface\Map\InfoBoard.cs" />
      <Compile Include="Assets\Scripts\Interface\Game interface\LoadButton.cs" />
      <Compile Include="Assets\Scripts\Interface\Inventory\GenInventory.cs" />
      <Compile Include="Assets\Scripts\Interface\Game interface\NotesButton.cs" />
-     <Compile Include="Assets\Scripts\Interface\Inventory\TradeExitButton.cs" />
+     <Compile Include="Assets\Scripts\Interface\Inventory\TradeExitText.cs" />
      <Compile Include="Assets\Scripts\Interface\Location\HouseEnter.cs" />
      <Compile Include="Assets\Scripts\Interface\House\NPCDialogOpen.cs" />
      <Compile Include="Assets\Scripts\Interface\Map\TravelButton.cs" />
      <Compile Include="Assets\Scripts\Interface\Inventory\UpdatePlayerData.cs" />
      <Compile Include="Assets\Scripts\Interface\Game interface\OkButton.cs" />
      <Compile Include="Assets\Scripts\Interface\Game interface\NotesOpen.cs" />
-     <Compile Include="Assets\Scripts\Interface\Trade\GenInventoryPlayer.cs" />
+     <Compile Include="Assets\Scripts\Interface\Trade\GenInventoryPlayerBuy.cs" />
      <Compile Include="Assets\Scripts\Interface\Menu\Continue.cs" />
      <Compile Include="Assets\Scripts\Interface\Game interface\TimeUpdate.cs" />
      <Compile Include="Assets\Scripts\Interface\Trade\UpdateTraderMoney.cs" />
      <Compile Include="Assets\Scripts\Interface\House\BuyAction.cs" />
+     <Compile Include="Assets\Scripts\Interface\Trade\TradeContinue.cs" />
      <Compile Include="Assets\Scripts\Interface\Game interface\InventoryOpen.cs" />
      <Compile Include="Assets\Scripts\Interface\Trade\InventoryDrag.cs" />
      <Compile Include="Assets\Scripts\Interface\Menu\Exit.cs" />
      <Compile Include="Assets\Scripts\Interface\House\TalkAction.cs" />
      <Compile Include="Assets\Scripts\Interface\Game interface\MenuOpen.cs" />
+     <Compile Include="Assets\Scripts\Interface\Trade\TradeExitButton.cs" />
      <None Include="Assets\Scripts\Interface\Inventory.asmdef" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
