Add stats update, fix product error

--- a/WorldSystem.csproj
+++ b/WorldSystem.csproj
@@ -36,63 +36,63 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\WorldSys\Bortnik.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Bortnik.cs" />
      <Compile Include="Assets\Scripts\WorldSys\GlobalNames.cs" />
      <Compile Include="Assets\Scripts\WorldSys\TimeSystem.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Trader.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Miner.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Shoes.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Сook.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Potter.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Brewer.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Trader.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Miner.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Shoes.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Сook.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Potter.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Brewer.cs" />
      <Compile Include="Assets\Scripts\WorldSys\NPCData.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Road.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Wax.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Pottery.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Fur.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Table.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Horseshoe.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Woodman.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Bread.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Wax.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Pottery.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Fur.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Table.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Horseshoe.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Woodman.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Bread.cs" />
      <Compile Include="Assets\Scripts\WorldSys\LocalEvent.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Shoemaker.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Candle.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Board.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Shoemaker.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Candle.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Board.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Effect.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Location.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Millworker.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Millworker.cs" />
      <Compile Include="Assets\Scripts\WorldSys\WorldSystem.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Metal.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Metal.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Event.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Priest.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Millet.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Hunter.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Skin.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Wood.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\TavernKeeper.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Beer.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Fermer.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\DriedMeat.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Priest.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Millet.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Hunter.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Skin.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Wood.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\TavernKeeper.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Beer.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Fermer.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\DriedMeat.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Inventory.cs" />
      <Compile Include="Assets\Scripts\WorldSys\NPC.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Flour.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Clay.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Flour.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Clay.cs" />
      <Compile Include="Assets\Scripts\WorldSys\LocationData.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Honey.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Tool.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Honey.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Tool.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Product.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Elder.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Weapon.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Seaman.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Blacksmith.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Elder.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Weapon.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Seaman.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Blacksmith.cs" />
      <Compile Include="Assets\Scripts\WorldSys\AllLocalEvents.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Book.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Woodworker.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Baker.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Book.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Woodworker.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\Professions\Baker.cs" />
      <Compile Include="Assets\Scripts\WorldSys\Prices.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Chair.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Chair.cs" />
      <Compile Include="Assets\Scripts\WorldSys\AllEvents.cs" />
-     <Compile Include="Assets\Scripts\WorldSys\Meat.cs" />
+     <Compile Include="Assets\Scripts\WorldSys\ProductTypes\Meat.cs" />
      <None Include="Assets\Scripts\WorldSys\WorldSystem.asmdef" />
      <None Include="Assets\Scripts\WorldSys\Logs.txt" />
     <Reference Include="UnityEngine">
